# aws-robomaker-jetbot-ros

./: .gitignore  .rosinstall  NOTICE  README.md  jetbot_local_setup.sh  setup.sh
src/aws_example_apps/: README.md
src/aws_example_apps/aws_example_apps/: CMakeLists.txt  package.xml
src/aws_example_apps/line_following/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
src/aws_example_apps/line_following/launch/: line_following.launch  line_following_sim.launch
src/aws_example_apps/line_following/nodes/: line_following
src/aws_example_apps/robo4kids/: CMakeLists.txt  package.xml  setup.py
src/aws_example_apps/robo4kids/assets/scripts/: Dockerfile  compile_arm64.sh  configure_docker.sh  install_deps.sh  jetbot.yaml
src/aws_example_apps/robo4kids/assets/teleop/: aws-iot.js
src/aws_example_apps/robo4kids/deploymentScripts/: post_launch_file.sh  pre_launch_file.sh
src/aws_example_apps/robo4kids/launch/: circle.launch  teleop.launch
src/aws_example_apps/robo4kids/nodes/: circle.py  teleop.py
src/aws_example_apps/robo4kids/robo4kids_webapp/: README.md  package.json
src/aws_example_apps/robo4kids/robo4kids_webapp/public/: index.html
src/aws_example_apps/robo4kids/robo4kids_webapp/src/: App.css  App.js
src/aws_example_apps/robo4kids/robo4kids_webapp/src/components/: iotConnection.js  runCode.js
src/aws_example_apps/robo4kids/robo4kids_webapp/src/components/customBlocks/: direction_factory.js  directionblocks.js
src/aws_example_apps/robo4kids/robo4kids_webapp/src/components/instructions/: instructions.js
src/aws_example_apps/robo4kids/robo4kids_webapp/src/components/levels/: level0.js  level1.js  level2.js  level3.js
src/aws_example_apps/simple_motion/: CMakeLists.txt  README.md  package.xml  setup.py
src/aws_example_apps/simple_motion/launch/: simple_motion_sim.launch
src/aws_example_apps/simple_motion/nodes/: simple_motion
src/aws_example_apps/slam_demo/: CMakeLists.txt  package.xml
src/aws_example_apps/slam_demo/launch/: explore_world.launch
src/aws_example_gazebo_worlds/: README.md
src/aws_example_gazebo_worlds/empty_world/: CMakeLists.txt  LICENSE  package.xml
src/aws_example_gazebo_worlds/empty_world/launch/: world.launch
src/aws_example_gazebo_worlds/empty_world/world/: empty.world
src/aws_example_gazebo_worlds/track_world/: CMakeLists.txt  package.xml
src/aws_example_gazebo_worlds/track_world/models/track/: model.config  model.sdf
src/aws_example_gazebo_worlds/track_world/models/track/materials/scripts/: track.material
src/aws_example_gazebo_worlds/track_world/models/track/materials/textures/: track.xcf
src/aws_example_gazebo_worlds/track_world/world/: track.world
src/jetbot_controller/: CMakeLists.txt  package.xml  readme.md
src/jetbot_controller/config/: calibration.yaml  jetbot_diff_drive_control.yaml
src/jetbot_controller/launch/: jetbot_control.launch
src/jetbot_controller/src/calibrate/: calibrate_node.cpp  rang.hpp
src/jetbot_controller/src/jetbot_controller/: DiffDrive.cpp  DiffDrive.hpp  I2c.cpp  I2c.hpp  Jetbot.cpp  Jetbot.hpp  MotorHat.cpp  MotorHat.hpp  MotorHatDiffDrive.cpp  MotorHatDiffDrive.hpp  OsException.cpp  OsException.hpp  jetbot_controller_node.cpp
src/jetbot_description/: CMakeLists.txt  package.xml
src/jetbot_description/launch/: gazebo.launch  jetbot_description.launch  spawn.launch
src/jetbot_description/meshes/: lidar-base.dae
src/jetbot_description/meshes-jetbot-ros/: JetBot-v3-Chassis.dae
src/jetbot_description/rviz/: mapping_view.rviz
src/jetbot_description/urdf/: jetbot.gazebo.xacro
src/jetbot_navigation/: CMakeLists.txt  README.md  package.xml
src/jetbot_navigation/launch/: jetbot_amcl.launch  jetbot_move_base.launch
src/jetbot_navigation/param/: amcl_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
src/jetbot_robo4kids/: README.md  roboMakerSettings.json
src/jetbot_robo4kids/assets/policies/: iotpolicy.json
src/jetbot_robo4kids/assets/scripts/: install_deps.sh
src/jetbot_robo4kids/assets/teleop/: aws-exports.js  aws-iot.js
src/jetbot_robo4kids/resources/: cftemplate.yaml
src/jetbot_robo4kids/robot_ws/src/jetbot_app/: CMakeLists.txt  package.xml  setup.py
src/jetbot_robo4kids/robot_ws/src/jetbot_app/config/: README.md
src/jetbot_robo4kids/robot_ws/src/jetbot_app/deploymentScripts/: post_launch_file.sh  pre_launch_file.sh
src/jetbot_robo4kids/robot_ws/src/jetbot_app/launch/: circle.launch  teleop.launch
src/jetbot_robo4kids/robot_ws/src/jetbot_app/nodes/: circle.py  move.py  sparkfun_circle.py  teleop.py
src/jetbot_robo4kids/simulation_ws/src/jetbot_description/: CMakeLists.txt
src/jetbot_robo4kids/simulation_ws/src/jetbot_description/launch/: display.launch  gazebo.launch
src/jetbot_robo4kids/simulation_ws/src/jetbot_description/rviz/: urdf.rviz
src/jetbot_robo4kids/simulation_ws/src/jetbot_description/urdf/: jetbot.urdf
src/jetbot_robo4kids/simulation_ws/src/jetbot_sim_app/: CMakeLists.txt  package.xml
src/jetbot_robo4kids/simulation_ws/src/jetbot_sim_app/nodes/: circle.py  teleop.py
src/jetbot_slam/: CMakeLists.txt  LICENSE  README.md  package.xml
src/jetbot_slam/launch/: jetbot_slam.launch
