<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>jetbot_slam</name>
  <version>0.1.0</version>
  <description>
    ROS package containing the launch file for running SLAM.
  </description>

  <license>MIT</license>
  <author email="aws-robomaker@amazon.com">AWS RoboMaker</author>
  <maintainer email="aws-robomaker@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gmapping</depend>
</package>
