<?xml version="1.0"?>
<!-- Full information here http://wiki.ros.org/catkin/package.xml -->
<package format="2">
  <name>line_following</name>
  <version>0.1.0</version>
  <description>
    ROS package for the robot to follow a line with a camera.
  </description>

  <license>MIT</license>
  <author email="aws-robomaker@amazon.com">AWS RoboMaker</author>
  <maintainer email="aws-robomaker@amazon.com">AWS RoboMaker</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
</package>
