<?xml version="1.0"?>
<package format="2">
  <name>empty_world</name>
  <version>0.1.0</version>
  <description>The empty_world package</description>
  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>MIT</license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robomaker-jetbot</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>

</package>
