<?xml version="1.0"?>
<package format="2">
  <name>track_world</name>
  <version>0.1.0</version>
  <description>The track_world package containing a simple track.</description>

  <maintainer email="alberto.quattrini.li@dartmouth.edu">Alberto Quattrini Li</maintainer>

  <license>MIT</license>

  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robomaker-jetbot</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
